<resources>
    <string name="app_name">Hermes Solitaire</string>
    <string name="win_ad_confirm">New Game</string>
    <string name="win_ad_title">You Won!</string>
    <string name="win_ad_msg">Congratulations! Here are your stats…\nMoves: %1$s\nTime: %2$s\nScore: %3$s\nTotal Score: %4$s\n┗ Moves + Time + Score (Lower is better)</string>
    <string name="close_ad_confirm">Yes</string>
    <string name="close_ad_dismiss">No</string>
    <string name="close_ad_title">Quit Game?</string>
    <string name="close_ad_msg">This game will count on your stats if more than 1 move has been made!!</string>
    <string name="card_cdesc_back">Back of a card</string>
    <string name="card_cdesc_icon">%1$s of %2$s</string>
    <string name="menu_cdesc_close">Close %1$s menu.</string>
    <string name="menu_button_games">Games</string>
    <string name="menu_cdesc_games">Select game.</string>
    <string name="menu_button_rules">Rules</string>
    <string name="menu_cdesc_rules">Game rules.</string>
    <string name="menu_button_stats">Stats</string>
    <string name="menu_cdesc_stats">View stats.</string>
    <string name="menu_cdesc_sync">Sync stats.</string>
    <string name="menu_button_settings">Settings</string>
    <string name="menu_cdesc_settings">Change settings.</string>
    <string name="menu_button_about">About</string>
    <string name="menu_cdesc_about">About the app.</string>
    <string name="pile_cdesc_empty">Pile is empty.</string>
    <string name="scoreboard_stat_moves">Moves\n%1$s</string>
    <string name="scoreboard_stat_time">Time\n%1$s</string>
    <string name="scoreboard_stat_score">Score\n%1$s</string>
    <string name="reset_ad_confirm_restart">Restart</string>
    <string name="reset_ad_confirm_new">New</string>
    <string name="reset_ad_dismiss">No</string>
    <string name="reset_ad_title">Are you sure?</string>
    <string name="reset_ad_msg">You can choose to restart the current game, a game with a new shuffle, or continue with this game.\n\nThis game will count on your stats if more than 1 move has been made!!</string>
    <string name="tools_button_menu">Menu</string>
    <string name="tools_cdesc_menu">Open Menu.</string>
    <string name="tools_cdesc_reset">Reset game.</string>
    <string name="tools_button_reset">Reset</string>
    <string name="tools_cdesc_undo">Undo last move.</string>
    <string name="tools_button_undo">Undo</string>
    <string name="games_all">All</string>
    <string name="games_klondike_turn_one">Klondike (Turn One)</string>
    <string name="games_klondike_turn_three">Klondike (Turn Three)</string>
    <string name="games_classic_westcliff">Classic Westcliff</string>
    <string name="games_easthaven">Easthaven</string>
    <string name="games_yukon">Yukon</string>
    <string name="games_alaska">Alaska</string>
    <string name="games_russian">Russian</string>
    <string name="games_australian_patience">Australian Patience</string>
    <string name="games_canberra">Canberra</string>
    <string name="games_golf">Golf</string>
    <string name="games_putt_putt">Putt Putt</string>
    <string name="games_golf_rush">Golf Rush</string>
    <string name="games_spider">Spider</string>
    <string name="games_spider_two_suits">Spider (2 Suits)</string>
    <string name="games_spider_one_suit">Spider (1 Suit)</string>
    <string name="games_beetle">Beetle</string>
    <string name="games_forty_thieves">Forty Thieves</string>
    <string name="games_forty_and_eight">Forty and Eight</string>
    <string name="games_aces_up">Aces Up</string>
    <string name="games_aces_up_relaxed">Aces Up (Relaxed)</string>
    <string name="games_aces_up_hard">Aces Up (Hard)</string>
    <string name="games_family">Family: %1$s</string>
    <string name="games_family_klondike">Klondike</string>
    <string name="games_family_yukon">Yukon</string>
    <string name="games_family_golf">Golf</string>
    <string name="games_family_spider">Spider</string>
    <string name="games_family_forty_thieves">Forty Thieves</string>
    <string name="games_family_other">Other</string>
    <string name="redeal">Redeals: %1$s</string>
    <string name="redeal_none">None</string>
    <string name="redeal_once">1</string>
    <string name="redeal_unlimited">Unlimited</string>
    <string name="suits_clubs">Clubs</string>
    <string name="suits_diamonds">Diamonds</string>
    <string name="suits_hearts">Hearts</string>
    <string name="suits_spades">Spades</string>
    <string name="games_ad_confirm">Yes</string>
    <string name="games_ad_dismiss">No</string>
    <string name="games_ad_title">Switch games?</string>
    <string name="games_ad_msg">A game has already been started, are you sure you want to switch games?\n\nThis game will count on your stats if more than 1 move has been made!!</string>
    <string name="stats_personal">Personal</string>
    <string name="stats_cdesc_ddm">Expand or collapse.</string>
    <string name="stats_games_played">Games Played</string>
    <string name="stats_global">Global</string>
    <string name="stats_label_ddm">Game</string>
    <string name="stats_games_won">Games Won</string>
    <string name="stats_games_won_value">%1$s (%2$s%%)</string>
    <string name="stats_lowest_moves">Lowest Moves in Win</string>
    <string name="stats_average_moves">Average Moves</string>
    <string name="stats_total_moves">Total Moves</string>
    <string name="stats_fastest_win">Fastest Win</string>
    <string name="stats_average_time">Average Time</string>
    <string name="stats_total_time">Total Time Played</string>
    <string name="stats_average_score">Average Score</string>
    <string name="stats_average_score_value">%1$s of %2$s (%3$s%%)</string>
    <string name="stats_best_combined_score">Best Combined Score</string>
    <string name="stats_best_combined_score_tip">┗ Moves + Time + Score (Lower is better)</string>
    <string name="about_by_name">By Jesus E. Valdes</string>
    <string name="about_changelog">Changelog</string>
    <string name="about_contact_me">Questions, comments, or concerns? \nFeel free to email me at</string>
    <string name="about_email_link">mailto:heyzeusvapps@gmail.com?subject=Hermes Solitaire</string>
    <string name="about_email">heyzeusvapps@gmail.com</string>
    <string name="about_external_icons">External Icons Used</string>
    <string name="about_license">License</string>
    <string name="about_special_thanks">Special thanks to family, friends, and pets for all their support!</string>
    <string name="about_translation_warning">Google Translate was used for localization. Please let me know of any mistakes, thank you!</string>
    <string name="about_version">v5.0.2</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_privacy_policy_link">https://doc-hosting.flycricket.io/klondike-solitaire/b4a088cc-badf-42f7-b9eb-e196ca220b1b/privacy</string>
    <string name="about_icon_credit">Card Suits by Amethyst Studio (CC BY 3.0)</string>
    <string name="about_icon_credit_link">https://thenounproject.com/icon/card-suits-5874174/</string>
    <string name="animation_duration_none">None</string>
    <string name="animation_duration_slowest">Slowest - 1s</string>
    <string name="animation_duration_slow">Slow - 500ms</string>
    <string name="animation_duration_fast">Fast - 250ms</string>
    <string name="animation_duration_fastest">Fastest - 100ms</string>
    <string name="account_sign_up">Sign Up</string>
    <string name="account_log_in">Log In</string>
    <string name="account_logged_in">Logged In</string>
    <string name="account_username">Username</string>
    <string name="account_email">Email</string>
    <string name="account_password">Password</string>
    <string name="account_password_visibility">Visibility</string>
    <string name="account_forgot_password">Forgot Password</string>
    <string name="account_sign_out">Sign Out</string>
    <string name="sign_out_ad_title">Are you sure?</string>
    <string name="sign_out_ad_message">You have stats that haven\'t been uploaded, which will be deleted on sign out!</string>
    <string name="sign_out_ad_confirm">Yes</string>
    <string name="sign_out_ad_dismiss">No</string>
    <string name="hello_user">Hello %1$s</string>
    <string name="internet_error">No internet connection</string>
    <string name="username_error">Please enter a different username.</string>
    <string name="email_error">Please use a valid email.</string>
    <string name="username_in_use_error">Username is in use. Please select a different username.</string>
    <string name="email_password_recovery">Recovery email has been sent.</string>
    <string name="password_error">Password must be at least 6 characters long and contain at least 1 digit, 1 lowercase letter, 1 uppercase letter, and 1 symbol.</string>
    <string name="empty_password_error">Password cannot be empty.</string>
    <string name="generic_error">Something went wrong. Please try again.</string>
    <string name="settings_account">Account</string>
    <string name="settings_animation_duration">Animation Speed</string>
    <string name="rules_stock">Stock</string>
    <string name="rules_waste">Waste</string>
    <string name="rules_foundation">Foundation</string>
    <string name="rules_tableau">Tableau</string>
    <string name="account_status_username_check">Checking username availability…</string>
    <string name="account_status_creating_account">Creating account…</string>
    <string name="account_status_sign_in">Signing In…</string>
    <string name="account_status_sign_out">Signing In…</string>
    <string name="account_status_upload_personal_stats">Uploading personal stats…</string>
    <string name="account_status_upload_global_stats">Updating global stats…</string>
    <string name="account_status_download_personal_stats">Downloading personal stats…</string>
    <string name="account_status_download_global_stats">Downloading global stats…</string>
    <string name="sync_ad_title">Upload personal stats and download global stats?</string>
    <string name="sync_ad_message">You can only sync stats once every 5 minutes.</string>
    <string name="sync_ad_confirm">Yes</string>
    <string name="sync_ad_dismiss">No</string>
    <string name="sync_error_time">You can sync in %1$s.</string>
    <string name="sync_error_no_user">Please sign in first.</string>
    <string name="sync_error_no_stats">Nothing to upload!</string>
    <string name="sync_error_no_internet">No internet connection.</string>
</resources>