...
) {
    Row(
        modifier = modifier
            .height(88.dp)
            .fillMaxWidth()
            .padding(horizontal = 16.dp)
            .testTag("Scoreboard"),
        horizontalArrangement = Arrangement.SpaceEvenly,
        verticalAlignment = Alignment.CenterVertically
    ) {
        Text(
            text = stringResource(R.string.scoreboard_stat_moves, moves),
            modifier = Modifier.weight(1f),
...
