...
    )
    Row(
        modifier = modifier
            .fillMaxWidth()
            .padding(horizontal = dimensionResource(R.dimen.tbPaddingHorizontal))
            .padding(bottom = dimensionResource(R.dimen.tbPaddingBottom))
            .testTag("Tools"),
        horizontalArrangement = Arrangement.spacedBy(dimensionResource(R.dimen.tbRowSpacedBy)),
        verticalAlignment = Alignment.Top
    ) {
        val rowModifier = Modifier
            .weight(1f)
            .height(dimensionResource(R.dimen.tbButtonHeight))
...
