...
            gameChanged = true
        },
        dismissOnClick = { displayGameSwitch = false }
    )
    MenuScreen(
        menu = MenuState.Games,
        modifier = Modifier.testTag("Games Menu"),
        onBackPress = { onBackPress(menuSelectedGame, gameChanged) }
    ) {
        LazyColumn(
            modifier = Modifier.testTag("Games Menu List"),
            state = lazyColumnState,
            verticalArrangement = Arrangement.spacedBy(dimensionResource(R.dimen.gColumnSpacedBy))
...
