...
@Composable
fun AboutMenu(
    onBackPress: () -> Unit
) {
    MenuScreen(
        menu = MenuState.About,
        modifier = Modifier.testTag("About Menu"),
        onBackPress = onBackPress
    ) {
        Column(
            modifier = Modifier
                .fillMaxWidth()
                .verticalScroll(rememberScrollState()),
...
