...
    syncStatsConfirmOnClick: () -> Unit = { }
) {
    var displaySyncStatsAD by remember { mutableStateOf(false) }
    AccountStatusIndicator(accountStatus)
    MenuScreen(
        menu = MenuState.Stats,
        modifier = Modifier.testTag("Stats Menu"),
        onBackPress = onBackPressed,
        extraAction = { modifier ->
            Icon(
                painter = painterResource(R.drawable.button_sync),
                contentDescription = stringResource(R.string.menu_cdesc_sync),
                modifier = modifier
...
